Pass ApplicationContext to routes, move more things to controllers